add mutation for Book class.