@@ -1,20 +1,25 @@
 package com.example.graphqlserver;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 public record Author (String id, String firstName, String lastName) {
 
-    private static List<Author> authors = Arrays.asList(
+    private static List<Author> authors = new ArrayList<>(List.of(
             new Author("author-1", "Joshua", "Bloch"),
             new Author("author-2", "Douglas", "Adams"),
             new Author("author-3", "Bill", "Bryson")
-    );
+    ));
 
     public static Author getById(String id) {
         return authors.stream()
-				.filter(author -> author.id().equals(id))
-				.findFirst()
-				.orElse(null);
+                .filter(author -> author.id().equals(id))
+                .findFirst()
+                .orElse(null);
+    }
+
+    public static List<Author> getAuthors(){
+        return authors;
     }
 }
